@@ -5,6 +5,7 @@ Fixed Notice:  Use of undefined constant ship_id - assumed 'ship_id' in sched_de
 Fixed Notice:  Undefined variable: name in mailto2.php
 Fixed Notice:  Use of undefined constant ship_id - assumed 'ship_id' in mailto2.php
 Fixed Notice:  Undefined variable: l_lssd in port2.php
+Fixed Notice:  Undefined variable: db_logging in lrscan.php also cleanup.
 
 TheMightyDude (19 July 2012)
 --------------------------------------
